# libbmp__Deprecated

./: .gitignore  CMakeLists.txt
QTSample/: CMakeLists.txt
QTSample/headers/: bitmapview.h  mainwindow.h
QTSample/src/: bitmapview.cpp  main.cpp  mainwindow.cpp
QTSample/ui/: mainwindow.ui
libbmp/: CMakeLists.txt  common.h  headers.h  libbmp.cpp  libbmp.h
sample/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  Simple_2x2_24bit_bmp.h  main.cpp
